<resources>
    <string name="app_name">My Bookcase</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">O email informado não é válido</string>
    <string name="invalid_password">A senha deve ter no mínimo 8 caracteres</string>
    <string name="login_failed">"Login failed"</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Home</string>
    <string name="menu_dashboard">Home</string>
    <string name="menu_acervo_livros">Acervo de Livros</string>
    <string name="menu_acervo_filmes">Acervo de Filmes</string>
    <string name="menu_livros_futuros">Livros para ler depois</string>
    <string name="menu_filmes_futuros">Filmes para ver depois</string>
    <string name="menu_sobre">Sobre</string>
    <string name="menu_logout">Sair</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test_button">TestButton</string>
</resources>
